finish build dataset

--- a/processing/01_build_dataset.ipynb
+++ b/processing/01_build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,16 +66,24 @@
     "    return ids\n",
     "\n",
     "# 不同的大语言模型对conversation要求不同\n",
-    "def apply_conversation_template(conversation_template, video_name):\n",
-    "    if video_name in conversation_template:\n",
-    "        return conversation_template[video_name]\n",
-    "    else:\n",
-    "        return video_name"
+    "def apply_conversation_template(llm_name, num_images, prompt):\n",
+    "    if llm_name == \"llava-next\":\n",
+    "        conversation = [\n",
+    "            {\n",
+    "            \"role\": \"user\",\n",
+    "            \"content\": [\n",
+    "                {\"type\": \"text\", \"text\": prompt},\n",
+    "                # 重复{\"type\": \"image\"}, num_images次\n",
+    "                *[{\"type\": \"image\"} for _ in range(num_images)],\n",
+    "                ],\n",
+    "            },\n",
+    "        ]\n",
+    "    return conversation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,87 +140,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 'SumMe_video_7_01010304',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001545.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003345.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005145.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/006945.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008745.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01010404',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001560.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003360.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005160.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/006960.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008760.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01010504',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001575.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003375.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005175.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/006975.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008775.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01010604',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001590.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003390.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005190.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/006990.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008790.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01010704',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001605.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003405.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005205.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/007005.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008805.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01010804',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001620.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003420.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005220.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/007020.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008820.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01010904',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001635.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003435.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005235.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/007035.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008835.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01011004',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001650.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003450.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005250.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/007050.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008850.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01011104',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001665.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003465.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005265.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/007065.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008865.jpg')]},\n",
-       " {'id': 'SumMe_video_7_01011204',\n",
-       "  'images': [PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/001680.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/003480.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/005280.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/007080.jpg'),\n",
-       "   PosixPath('/root/autodl-tmp/data/SumMe/frames/Cockpit_Landing/008880.jpg')]}]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 2 生成dataset\n",
-    "dataset_samples_turn = []\n",
-    "dataset_samples_jump = []\n",
+    "# context_prompt = \"If you were a law enforcement agency, how would you rate the scene described on a scale from 0 to 1, with 0 representing a standard scene and 1 denoting a scene with suspicious activities?\"\n",
+    "context_prompt = \"You are a professional short film editor and director. Now you need to do some video summarization work. I will give you some frames of a short video. Please rate the frames based on their representativeness, diversity, and interest. You may need to refer to the context for rating. The rating is from 0 to 1, where 0 means not to be kept and 1 means to be kept.\"\n",
+    "\n",
+    "format_prompt = \"Please provide the response in the form of a Python list based on the framse and respond with just only one number for one frame in the provided list below [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0] without any textual explanation. It should begin with '[' and end with ']'. Apart from the score, do not reply anything else.\"\n",
+    "\n",
+    "finaly_prompt = context_prompt + \" \" + format_prompt\n",
+    "\n",
+    "dataset_samples_turn_summe = []\n",
+    "dataset_samples_jump_summe = []\n",
+    "dataset_samples_turn_tvsum = []\n",
+    "dataset_samples_jump_tvsum = []\n",
     "\n",
     "summe_videos = summe_dict.keys()\n",
     "tvsum_videos = tvsum_dict.keys()\n",
     "\n",
+    "# 生成SumMe的dataset\n",
     "for video_name in summe_videos:\n",
     "    video_name_real = summe_name_dict_revers[video_name]\n",
     "    frames_dir = Path(summe_frame_dir, video_name_real)\n",
@@ -227,17 +175,77 @@
     "        sample = {}\n",
     "        sample_id = id_generator(\"SumMe\", video_name, \"turn\", str(i), str(remainder_turn))\n",
     "        sample[\"id\"] = sample_id\n",
-    "        sample[\"images\"] = [Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\") for frame in clip]\n",
-    "        dataset_samples_turn.append(sample)\n",
+    "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        dataset_samples_turn_summe.append(sample)\n",
     "    \n",
     "    for i, clip in enumerate(clips_jump):\n",
     "        sample = {}\n",
     "        sample_id = id_generator(\"SumMe\", video_name, \"jump\", str(i), str(remainder_jump))\n",
     "        sample[\"id\"] = sample_id\n",
-    "        sample[\"images\"] = [Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\") for frame in clip]\n",
-    "        dataset_samples_jump.append(sample)\n",
+    "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        dataset_samples_jump_summe.append(sample)\n",
+    "\n",
+    "# 生成TVSum的dataset\n",
+    "for video_name in tvsum_videos:\n",
+    "    video_name_real = tvsum_name_dict_revers[video_name]\n",
+    "    frames_dir = Path(tvsum_frame_dir, video_name_real)\n",
+    "\n",
+    "    video_dict = tvsum_dict[video_name]\n",
+    "    picks = video_dict[\"picks\"]\n",
+    "\n",
+    "    clips_turn, remainder_turn = get_clips_turn(picks, clip_length=5)\n",
+    "    clips_jump, remainder_jump = get_clips_jump(picks, num_seg=5)\n",
+    "\n",
+    "    for i, clip in enumerate(clips_turn):\n",
+    "        sample = {}\n",
+    "        sample_id = id_generator(\"TVSum\", video_name, \"turn\", str(i), str(remainder_turn))\n",
+    "        sample[\"id\"] = sample_id\n",
+    "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        dataset_samples_turn_tvsum.append(sample)\n",
     "    \n",
-    "dataset_samples_jump[-100:-90]\n"
+    "    for i, clip in enumerate(clips_jump):\n",
+    "        sample = {}\n",
+    "        sample_id = id_generator(\"TVSum\", video_name, \"jump\", str(i), str(remainder_jump))\n",
+    "        sample[\"id\"] = sample_id\n",
+    "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        dataset_samples_jump_tvsum.append(sample)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3 保存dataset\n",
+    "out_dir_summe = Path(\"/root/TFVSN/dataset/SumMe\")\n",
+    "out_dir_tvsum = Path(\"/root/TFVSN/dataset/TVSum\")\n",
+    "if not out_dir_summe.exists():\n",
+    "    out_dir_summe.mkdir()\n",
+    "if not out_dir_tvsum.exists():\n",
+    "    out_dir_tvsum.mkdir()\n",
+    "\n",
+    "json_turn_summe = Path(out_dir_summe, \"summe_dataset_turn.json\")\n",
+    "json_jump_summe = Path(out_dir_summe, \"summe_dataset_jump.json\")\n",
+    "\n",
+    "json_turn_tvsum = Path(out_dir_tvsum, \"tvsum_dataset_turn.json\")\n",
+    "json_jump_tvsum = Path(out_dir_tvsum, \"tvsum_dataset_jump.json\")\n",
+    "\n",
+    "# 保存为json文件\n",
+    "with open(json_turn_summe, \"w\") as f:\n",
+    "    json.dump(dataset_samples_turn_summe, f, indent=4)\n",
+    "with open(json_jump_summe, \"w\") as f:\n",
+    "    json.dump(dataset_samples_jump_summe, f, indent=4)\n",
+    "with open(json_turn_tvsum, \"w\") as f:\n",
+    "    json.dump(dataset_samples_turn_tvsum, f, indent=4)\n",
+    "with open(json_jump_tvsum, \"w\") as f:\n",
+    "    json.dump(dataset_samples_jump_tvsum, f, indent=4)\n",
+    "    \n",
+    "\n"
    ]
   }
  ],
