--- a/processing/test.ipynb
+++ b/processing/test.ipynb
@@ -44,15 +44,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n",
-      "Expanding inputs for image tokens in LLaVa-NeXT should be done in processing. Please add `patch_size` and `vision_feature_select_strategy` to the model's processing config or set directly with `processor.patch_size = {{patch_size}}` and processor.vision_feature_select_strategy = {{vision_feature_select_strategy}}`. Using processors without these attributes in the config is deprecated and will throw an error in v4.47.\n"
+      "Setting `pad_token_id` to `eos_token_id`:None for open-end generation.\n"
      ]
     },
     {
@@ -61,12 +60,11 @@
      "text": [
       "[INST]  \n",
       " \n",
-      "describe the 2nd picture\n",
-      " [/INST] The image appears to be a stylized, colorful illustration of a bear standing in a forest clearing with a group of smaller animals around it. The bear is depicted with a friendly expression, and it's wearing a scarf. The smaller animals are various types, including what looks like a bird, a rabbit, and a squirrel, all of which are standing close to the bear.\n",
+      "explain the image given to you.they are different [/INST] The image you've provided appears to be a colorful, stylized illustration of a bear standing in a forest clearing with a group of smaller animals around it. The bear is depicted in a friendly and welcoming manner, with a smile on its face. The smaller animals seem to be enjoying the bear's company, with some of them perched on the bear's back.\n",
       "\n",
-      "The background features a gradient of colors, transitioning from a warm orange at the horizon to a cool blue at the top, suggesting either sunrise or sunset. The trees are depicted with a mix of green and blue hues, giving the impression of a serene, possibly magical forest.\n",
+      "The illustration is rich in detail and color, with the bear and the animals rendered in a way that suggests a warm and inviting atmosphere. The background features a variety of trees and foliage, which adds to the natural setting of the scene.\n",
       "\n",
-      "The image is annotated with various labels and numbers, indicating some sort of data or performance metrics. These labels include \"MMM-Vet,\" \"MMM-Bench,\" \"MMM-TextVQA,\" \"MMM-SQA-IMG,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM\n"
+      "The image also includes a circular diagram with various labels and numbers around it. This diagram seems to be a chart or graph that is related to the image, possibly indicating some sort of data or performance metrics. The labels include \"MMM-Vet,\" \"MMM-Bench,\" \"MMM-TextVQA,\" \"MMM-SQA-IMG,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA-TextVQA,\" \"MMM-SQA\n"
      ]
     }
    ],
@@ -83,7 +81,7 @@
     "    {\n",
     "      \"role\": \"user\",\n",
     "      \"content\": [\n",
-    "          {\"type\": \"text\", \"text\": \"describe the 2nd picture\\n\"},\n",
+    "          {\"type\": \"text\", \"text\": \"explain the image given to you.they are different\"},\n",
     "          {\"type\": \"image\"},\n",
     "          {\"type\": \"image\"},\n",
     "        ],\n",
