--- a/processing/01_build_dataset.ipynb
+++ b/processing/01_build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,9 +73,16 @@
     "            \"role\": \"user\",\n",
     "            \"content\": [\n",
     "                {\"type\": \"text\", \"text\": prompt},\n",
-    "                # 重复{\"type\": \"image\"}, num_images次\n",
-    "                *[{\"type\": \"image\"} for _ in range(num_images)],\n",
-    "                ],\n",
+    "                # 重复`{\"type\":\"text\",\"text\":f\"Frame {i}\"},{\"type\": \"image\"}``, num_images次\n",
+    "                {\"type\":\"text\",\"text\":f\"Frame 0\"},\n",
+    "                {\"type\": \"image\"},\n",
+    "                {\"type\":\"text\",\"text\":f\"Frame 1\"},\n",
+    "                {\"type\": \"image\"},\n",
+    "                {\"type\":\"text\",\"text\":f\"Frame 2\"},\n",
+    "                {\"type\": \"image\"},\n",
+    "                {\"type\":\"text\",\"text\":f\"Frame 3\"},\n",
+    "                {\"type\": \"image\"}    \n",
+    "            ]\n",
     "            },\n",
     "        ]\n",
     "    return conversation"
@@ -83,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -140,17 +147,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 2 生成dataset\n",
     "# context_prompt = \"If you were a law enforcement agency, how would you rate the scene described on a scale from 0 to 1, with 0 representing a standard scene and 1 denoting a scene with suspicious activities?\"\n",
-    "context_prompt = \"You are a professional short film editor and director. Now you need to do some video summarization work. I will give you some frames of a short video. Please rate the frames based on their representativeness, diversity, and interest. You may need to refer to the context for rating. The rating is from 0 to 1, where 0 means not to be kept and 1 means to be kept.\"\n",
+    "context_prompt = \"You are a professional short film editor and director. I will give you some frames of a short video. Please score the frames based on their representativeness, diversity, and interest on a scale from 0 to 1. You may need to refer to the context for rating. You need to anwser how many frames i give to you. Describe the content of the frame first and then give the score. And give the final score list like `[scores]`. Try not to give the same score and use the format below.\\n\"\n",
     "\n",
-    "format_prompt = \"Please provide the response in the form of a Python list based on the framse and respond with just only one number for one frame in the provided list below [0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1.0] without any textual explanation. It should begin with '[' and end with ']'. Apart from the score, do not reply anything else.\"\n",
+    "format_prompt = \"Format:\\n Frame 0: content of frame 0.\\n Frame 0 Score: your score.\\n Score List: [...]\\n\"\n",
     "\n",
-    "finaly_prompt = context_prompt + \" \" + format_prompt\n",
+    "\n",
+    "\n",
+    "finaly_prompt = context_prompt + format_prompt\n",
     "\n",
     "dataset_samples_turn_summe = []\n",
     "dataset_samples_jump_summe = []\n",
@@ -160,6 +169,8 @@
     "summe_videos = summe_dict.keys()\n",
     "tvsum_videos = tvsum_dict.keys()\n",
     "\n",
+    "clip_length = 4\n",
+    "\n",
     "# 生成SumMe的dataset\n",
     "for video_name in summe_videos:\n",
     "    video_name_real = summe_name_dict_revers[video_name]\n",
@@ -168,15 +179,15 @@
     "    video_dict = summe_dict[video_name]\n",
     "    picks = video_dict[\"picks\"]\n",
     "\n",
-    "    clips_turn, remainder_turn = get_clips_turn(picks, clip_length=5)\n",
-    "    clips_jump, remainder_jump = get_clips_jump(picks, num_seg=5)\n",
+    "    clips_turn, remainder_turn = get_clips_turn(picks, clip_length)\n",
+    "    clips_jump, remainder_jump = get_clips_jump(picks, clip_length)\n",
     "\n",
     "    for i, clip in enumerate(clips_turn):\n",
     "        sample = {}\n",
     "        sample_id = id_generator(\"SumMe\", video_name, \"turn\", str(i), str(remainder_turn))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
     "        dataset_samples_turn_summe.append(sample)\n",
     "    \n",
     "    for i, clip in enumerate(clips_jump):\n",
@@ -184,7 +195,7 @@
     "        sample_id = id_generator(\"SumMe\", video_name, \"jump\", str(i), str(remainder_jump))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
     "        dataset_samples_jump_summe.append(sample)\n",
     "\n",
     "# 生成TVSum的dataset\n",
@@ -195,15 +206,15 @@
     "    video_dict = tvsum_dict[video_name]\n",
     "    picks = video_dict[\"picks\"]\n",
     "\n",
-    "    clips_turn, remainder_turn = get_clips_turn(picks, clip_length=5)\n",
-    "    clips_jump, remainder_jump = get_clips_jump(picks, num_seg=5)\n",
+    "    clips_turn, remainder_turn = get_clips_turn(picks, clip_length)\n",
+    "    clips_jump, remainder_jump = get_clips_jump(picks, clip_length)\n",
     "\n",
     "    for i, clip in enumerate(clips_turn):\n",
     "        sample = {}\n",
     "        sample_id = id_generator(\"TVSum\", video_name, \"turn\", str(i), str(remainder_turn))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
     "        dataset_samples_turn_tvsum.append(sample)\n",
     "    \n",
     "    for i, clip in enumerate(clips_jump):\n",
@@ -211,13 +222,13 @@
     "        sample_id = id_generator(\"TVSum\", video_name, \"jump\", str(i), str(remainder_jump))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", 5, finaly_prompt)\n",
+    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
     "        dataset_samples_jump_tvsum.append(sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 236,
    "metadata": {},
    "outputs": [],
    "source": [
