--- a/processing/01_build_dataset.ipynb
+++ b/processing/01_build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 232,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,19 +147,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[17:32:29] /github/workspace/src/video/video_reader.cc:312: Failed to seek file to position: 0\n"
+     ]
+    }
+   ],
    "source": [
     "# 2 生成dataset\n",
     "# context_prompt = \"If you were a law enforcement agency, how would you rate the scene described on a scale from 0 to 1, with 0 representing a standard scene and 1 denoting a scene with suspicious activities?\"\n",
-    "context_prompt = \"You are a professional short film editor and director. I will give you some frames of a short video. Please score the frames based on their representativeness, diversity, and interest on a scale from 0 to 1. You may need to refer to the context for rating. You need to anwser how many frames i give to you. Describe the content of the frame first and then give the score. And give the final score list like `[scores]`. Try not to give the same score and use the format below.\\n\"\n",
+    "prompt = \"You are a professional short film editor and director. Please score the frames divided based on theirs representativeness, diversity, and interest on a scale from 0 to 1. You may need to refer to the context for rating. And give the final score list like `[scores]`.\\n without any extra text. You must output score.\"\n",
     "\n",
-    "format_prompt = \"Format:\\n Frame 0: content of frame 0.\\n Frame 0 Score: your score.\\n Score List: [...]\\n\"\n",
-    "\n",
-    "\n",
-    "\n",
-    "finaly_prompt = context_prompt + format_prompt\n",
+    "finaly_prompt = prompt\n",
     "\n",
     "dataset_samples_turn_summe = []\n",
     "dataset_samples_jump_summe = []\n",
@@ -169,40 +173,69 @@
     "summe_videos = summe_dict.keys()\n",
     "tvsum_videos = tvsum_dict.keys()\n",
     "\n",
-    "clip_length = 4\n",
+    "clip_length = 10\n",
+    "\n",
+    "from decord import VideoReader, cpu\n",
     "\n",
     "# 生成SumMe的dataset\n",
     "for video_name in summe_videos:\n",
     "    video_name_real = summe_name_dict_revers[video_name]\n",
     "    frames_dir = Path(summe_frame_dir, video_name_real)\n",
-    "\n",
+    "    \n",
+    "    # NEW CODE\n",
+    "    video_path = Path(origin_dataset_dir,\"SumMe\",\"videos\",f\"{video_name_real}.mp4\")\n",
+    "    vr = VideoReader(str(video_path), ctx=cpu(0),num_threads=1)\n",
+    "    total_frame_num = len(vr)\n",
+    "    video_time = total_frame_num / vr.get_avg_fps()\n",
+    "    fps = round(vr.get_avg_fps())\n",
+    "    # NEW CODE\n",
+    "    \n",
     "    video_dict = summe_dict[video_name]\n",
     "    picks = video_dict[\"picks\"]\n",
-    "\n",
     "    clips_turn, remainder_turn = get_clips_turn(picks, clip_length)\n",
     "    clips_jump, remainder_jump = get_clips_jump(picks, clip_length)\n",
     "\n",
     "    for i, clip in enumerate(clips_turn):\n",
+    "        # NEW CODE\n",
+    "        frame_time = [frame/fps for frame in clip]\n",
+    "        frame_time = \",\".join([f\"{i:.2f}s\" for i in frame_time])\n",
+    "        # NEW CODE\n",
     "        sample = {}\n",
     "        sample_id = id_generator(\"SumMe\", video_name, \"turn\", str(i), str(remainder_turn))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
+    "        sample[\"prompt\"] = finaly_prompt\n",
+    "        sample[\"video_time\"] = video_time\n",
+    "        sample[\"frame_time\"] = frame_time\n",
     "        dataset_samples_turn_summe.append(sample)\n",
     "    \n",
     "    for i, clip in enumerate(clips_jump):\n",
+    "        # NEW CODE\n",
+    "        frame_time = [frame/fps for frame in clip]\n",
+    "        frame_time = \",\".join([f\"{i:.2f}s\" for i in frame_time])\n",
+    "        # NEW CODE\n",
     "        sample = {}\n",
     "        sample_id = id_generator(\"SumMe\", video_name, \"jump\", str(i), str(remainder_jump))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
+    "        sample[\"prompt\"] = finaly_prompt\n",
+    "        sample[\"video_time\"] = video_time\n",
+    "        sample[\"frame_time\"] = frame_time\n",
     "        dataset_samples_jump_summe.append(sample)\n",
     "\n",
     "# 生成TVSum的dataset\n",
     "for video_name in tvsum_videos:\n",
     "    video_name_real = tvsum_name_dict_revers[video_name]\n",
     "    frames_dir = Path(tvsum_frame_dir, video_name_real)\n",
-    "\n",
+    "    \n",
+    "    # NEW CODE\n",
+    "    video_path = Path(origin_dataset_dir,\"TVSum\",\"videos\",f\"{video_name_real}.mp4\")\n",
+    "    vr = VideoReader(str(video_path), ctx=cpu(0),num_threads=1)\n",
+    "    total_frame_num = len(vr)\n",
+    "    video_time = total_frame_num / vr.get_avg_fps()\n",
+    "    fps = round(vr.get_avg_fps())\n",
+    "    # NEW CODE\n",
+    "    \n",
     "    video_dict = tvsum_dict[video_name]\n",
     "    picks = video_dict[\"picks\"]\n",
     "\n",
@@ -210,25 +243,38 @@
     "    clips_jump, remainder_jump = get_clips_jump(picks, clip_length)\n",
     "\n",
     "    for i, clip in enumerate(clips_turn):\n",
+    "        # NEW CODE\n",
+    "        frame_time = [frame/fps for frame in clip]\n",
+    "        frame_time = \",\".join([f\"{i:.2f}s\" for i in frame_time])\n",
+    "        # NEW CODE\n",
     "        sample = {}\n",
     "        sample_id = id_generator(\"TVSum\", video_name, \"turn\", str(i), str(remainder_turn))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
+    "        sample[\"prompt\"] = finaly_prompt\n",
+    "        sample[\"video_time\"] = video_time\n",
+    "        sample[\"frame_time\"] = frame_time\n",
     "        dataset_samples_turn_tvsum.append(sample)\n",
     "    \n",
     "    for i, clip in enumerate(clips_jump):\n",
+    "        # NEW CODE\n",
+    "        frame_time = [frame/fps for frame in clip]\n",
+    "        frame_time = \",\".join([f\"{i:.2f}s\" for i in frame_time])\n",
+    "        # NEW CODE\n",
+    "        \n",
     "        sample = {}\n",
     "        sample_id = id_generator(\"TVSum\", video_name, \"jump\", str(i), str(remainder_jump))\n",
     "        sample[\"id\"] = sample_id\n",
     "        sample[\"images\"] = [str(Path(frames_dir, f\"{str(frame).zfill(6)}.jpg\")) for frame in clip]\n",
-    "        sample[\"conversation\"] = apply_conversation_template(\"llava-next\", clip_length, finaly_prompt)\n",
+    "        sample[\"prompt\"] = finaly_prompt\n",
+    "        sample[\"video_time\"] = video_time\n",
+    "        sample[\"frame_time\"] = frame_time\n",
     "        dataset_samples_jump_tvsum.append(sample)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +308,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "new",
    "language": "python",
    "name": "python3"
   },
