--- a/processing/test.ipynb
+++ b/processing/test.ipynb
@@ -50,7 +50,6 @@
     "]\n",
     "prompt = processor.apply_chat_template(conversation, add_generation_prompt=True)\n",
     "inputs = processor(images=[image1, image2], text=prompt, return_tensors=\"pt\").to(\"cuda:0\")\n",
-    "inputs\n",
     "# inputs.pixel_values.shape\n",
     "# autoregressively complete prompt\n",
     "output = model.generate(**inputs, max_new_tokens=1000)\n",
@@ -62,7 +61,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "myenv",
+   "display_name": "new",
    "language": "python",
    "name": "python3"
   },
