--- a/processing/01_build_dataset.ipynb
+++ b/processing/01_build_dataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,12 +90,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 1 读取基本信息\n",
-    "origin_dataset_dir = \"/root/autodl-tmp/data\"\n",
+    "origin_dataset_dir = \"/home/insight/workspace/TFVSN/data\"\n",
     "\n",
     "summe_h5_path = Path(origin_dataset_dir,\"SumMe\",\"summe.h5\")\n",
     "tvsum_h5_path = Path(origin_dataset_dir, \"TVSum\", \"tvsum.h5\")\n",
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,14 +147,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[17:32:29] /github/workspace/src/video/video_reader.cc:312: Failed to seek file to position: 0\n"
+      "[14:34:05] /github/workspace/src/video/video_reader.cc:312: Failed to seek file to position: 0\n"
      ]
     }
    ],
@@ -274,13 +274,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# 3 保存dataset\n",
-    "out_dir_summe = Path(\"/root/TFVSN/dataset/SumMe\")\n",
-    "out_dir_tvsum = Path(\"/root/TFVSN/dataset/TVSum\")\n",
+    "out_dir_summe = Path(\"/home/insight/workspace/TFVSN/dataset/SumMe\")\n",
+    "out_dir_tvsum = Path(\"/home/insight/workspace/TFVSN/dataset/TVSum\")\n",
     "if not out_dir_summe.exists():\n",
     "    out_dir_summe.mkdir()\n",
     "if not out_dir_tvsum.exists():\n",
