--- a/processing/02_query_llm.ipynb
+++ b/processing/02_query_llm.ipynb
@@ -159,10 +159,13 @@
     "        conv_template = \"qwen_1_5\"  # Make sure you use correct chat template for different models\n",
     "        time_instruciton = f\"The video lasts for {video_time:.2f} seconds, and {len(images[0])} frames are uniformly sampled from it. These frames are located at {frame_time}.Please answer the following questions related to this video.\"\n",
     "        question = DEFAULT_IMAGE_TOKEN + f\"\\n{time_instruciton}\\n{prompt}\"\n",
+    "        \n",
     "        conv = copy.deepcopy(conv_templates[conv_template])\n",
     "        conv.append_message(conv.roles[0], question)\n",
     "        conv.append_message(conv.roles[1], None)\n",
+    "        \n",
     "        prompt_question = conv.get_prompt()\n",
+    "        \n",
     "        input_ids = tokenizer_image_token(prompt_question, tokenizer, IMAGE_TOKEN_INDEX, return_tensors=\"pt\").unsqueeze(0).to(device)\n",
     "        cont = model.generate(\n",
     "            input_ids,\n",
@@ -173,8 +176,24 @@
     "            max_new_tokens=500,\n",
     "        )\n",
     "        text_outputs = tokenizer.batch_decode(cont, skip_special_tokens=True)[0].strip()\n",
+    "        \n",
+    "        # 更新conv\n",
+    "        conv.messages[1][1] = text_outputs\n",
+    "        question2 = \"For the frames I gave, I first analyzed the content of each frame and then gave the importance score of the frame in the video summarization task. The output is given in the following format :\\n Frame 1: frame content\\n Score: [score] ...\"\n",
+    "        conv.append_message(conv.roles[0], question2)\n",
+    "        prompt2 = conv.get_prompt()\n",
+    "        input_ids = tokenizer_image_token(prompt2, tokenizer, IMAGE_TOKEN_INDEX, return_tensors=\"pt\").unsqueeze(0).to(device)\n",
+    "        cont = model.generate(\n",
+    "            input_ids,\n",
+    "            images=images,\n",
+    "            modalities= [\"video\"],\n",
+    "            do_sample=False,\n",
+    "            temperature=0,\n",
+    "            max_new_tokens=500,\n",
+    "        )\n",
+    "        text_outputs2 = tokenizer.batch_decode(cont, skip_special_tokens=True)[0].strip()\n",
     "        print(\"========================================\")\n",
-    "        print(text_outputs)\n",
+    "        print(text_outputs2)\n",
     "        break"
    ]
   }
@@ -195,7 +214,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
