--- a/processing/02_query_llm.ipynb
+++ b/processing/02_query_llm.ipynb
@@ -2,26 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from PIL import Image\n",
-    "from llava.model.builder import load_pretrained_model\n",
-    "from llava.mm_utils import tokenizer_image_token\n",
-    "from llava.constants import IMAGE_TOKEN_INDEX, DEFAULT_IMAGE_TOKEN\n",
-    "from llava.conversation import conv_templates\n",
     "import copy\n",
-    "import numpy as np\n",
+    "import json\n",
     "import warnings\n",
-    "from decord import VideoReader, cpu\n",
+    "import numpy as np\n",
+    "from PIL import Image\n",
     "from pathlib import Path\n",
-    "import json"
+    "from decord import VideoReader, cpu\n",
+    "from llava.conversation import conv_templates\n",
+    "from llava.mm_utils import tokenizer_image_token\n",
+    "from llava.model.builder import load_pretrained_model\n",
+    "from llava.constants import IMAGE_TOKEN_INDEX, DEFAULT_IMAGE_TOKEN\n",
+    "# pip install git+https://github.com/LLaVA-VL/LLaVA-NeXT.git"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -77,25 +78,11 @@
      "text": [
       "Loading vision tower: google/siglip-so400m-patch14-384\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Loading checkpoint shards: 100%|██████████| 4/4 [00:04<00:00,  1.12s/it]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model Class: LlavaQwenForCausalLM\n"
-     ]
     }
    ],
    "source": [
     "# 1 加载模型\n",
-    "warnings.filterwarnings(\"ignore\")\n",
+    "# warnings.filterwarnings(\"ignore\")\n",
     "pretrained = \"lmms-lab/LLaVA-Video-7B-Qwen2\"\n",
     "model_name = \"llava_qwen\"\n",
     "device = \"cuda\"\n",
@@ -122,24 +109,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "========================================\n",
-      "You have provided 10 frames.\n",
-      "========================================\n",
-      "You have provided 10 frames to me.\n",
-      "========================================\n",
-      "You have provided 10 frames.\n",
-      "========================================\n",
-      "You have provided 10 frames.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3 执行query循环\n",
     "for dataset in json_files:\n",
@@ -200,7 +172,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "new",
+   "display_name": "tmp",
    "language": "python",
    "name": "python3"
   },
