--- a/TEST.ipynb
+++ b/TEST.ipynb
@@ -2,49 +2,55 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import json\n",
+    "from pathlib import Path\n",
     "import h5py\n",
-    "from pathlib import Path\n",
-    "from dataloader.vs_dataset import VideoSummarizationDataset\n",
-    "import importlib\n",
-    "import importlib.util\n",
-    "import sys\n",
-    "from pathlib import Path\n",
-    "import numpy as np\n",
-    "import torch"
+    "import torch\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "from pprint import pprint\n",
+    "from PIL import Image\n",
+    "from dataloader.vs_dataset import VideoSummarizationDataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "Numpy is not available",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[40], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mtensor([\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m])\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43ma\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mnumpy\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[0;31mRuntimeError\u001b[0m: Numpy is not available"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "a = torch.tensor([1, 2, 3])\n",
-    "print(a.numpy())\n",
-    "\n"
+    "dataset = VideoSummarizationDataset(\n",
+    "    root_path=\"/root/autodl-tmp/data\",\n",
+    "    dataset_name=\"SumMe\"\n",
+    ")\n",
+    "sample0 = dataset[0]\n",
+    "keys = sample0.keys()\n",
+    "# dict_keys(['change_points', 'gtscore', 'gtsummary', 'n_frame_per_seg', 'n_frames', 'n_steps', 'picks', 'user_summary', 'frame_file_paths', 'video_name'])\n",
+    "pprint(len(sample0[\"picks\"]))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "llava",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -58,7 +64,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.16"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
