--- a/TEST.ipynb
+++ b/TEST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,39 +13,47 @@
     "from torch.utils.data import Dataset, DataLoader\n",
     "from pprint import pprint\n",
     "from PIL import Image\n",
-    "from dataloader.vs_dataset import VideoSummarizationDataset"
+    "from dataloader.vs_dataset import VideoSummarizationDataset\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# dataset = VideoSummarizationDataset(\n",
+    "#     root_path=\"/root/autodl-tmp/data\",\n",
+    "#     dataset_name=\"SumMe\"\n",
+    "# )\n",
+    "# sample0 = dataset[0]\n",
+    "# keys = sample0.keys()\n",
+    "# dict_keys(['change_points', 'gtscore', 'gtsummary', 'n_frame_per_seg', 'n_frames', 'n_steps', 'picks', 'user_summary', 'frame_file_paths', 'video_name'])\n",
+    "# pprint(len(sample0[\"picks\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "300\n"
+      "<class 'torch.Tensor'>\n",
+      "torch.Size([708, 2560])\n"
      ]
     }
    ],
    "source": [
-    "dataset = VideoSummarizationDataset(\n",
-    "    root_path=\"/root/autodl-tmp/data\",\n",
-    "    dataset_name=\"SumMe\"\n",
-    ")\n",
-    "sample0 = dataset[0]\n",
-    "keys = sample0.keys()\n",
-    "# dict_keys(['change_points', 'gtscore', 'gtsummary', 'n_frame_per_seg', 'n_frames', 'n_steps', 'picks', 'user_summary', 'frame_file_paths', 'video_name'])\n",
-    "pprint(len(sample0[\"picks\"]))"
+    "# 读取npy文件加载为tensor并查看维度\n",
+    "data = np.load(\"/root/autodl-tmp/data/TVSum/features/text/-esJrBWj2d8_text.npy\")\n",
+    "tensor_data = torch.tensor(data)\n",
+    "print(type(tensor_data))\n",
+    "print(tensor_data.shape)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
