--- a/TEST.ipynb
+++ b/TEST.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,18 +19,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "300\n"
+     ]
+    }
+   ],
    "source": [
-    "# dataset = VideoSummarizationDataset(\n",
-    "#     root_path=\"/root/autodl-tmp/data\",\n",
-    "#     dataset_name=\"SumMe\"\n",
-    "# )\n",
-    "# sample0 = dataset[0]\n",
-    "# keys = sample0.keys()\n",
+    "dataset = VideoSummarizationDataset(\n",
+    "    root_path=\"/root/autodl-tmp/data\",\n",
+    "    dataset_name=\"SumMe\"\n",
+    ")\n",
+    "sample0 = dataset[0]\n",
+    "keys = sample0.keys()\n",
     "# dict_keys(['change_points', 'gtscore', 'gtsummary', 'n_frame_per_seg', 'n_frames', 'n_steps', 'picks', 'user_summary', 'frame_file_paths', 'video_name'])\n",
-    "# pprint(len(sample0[\"picks\"]))"
+    "pprint(len(sample0[\"gtscore\"]))"
    ]
   },
   {
@@ -49,10 +57,10 @@
    ],
    "source": [
     "# 读取npy文件加载为tensor并查看维度\n",
-    "data = np.load(\"/root/autodl-tmp/data/TVSum/features/text/-esJrBWj2d8_text.npy\")\n",
-    "tensor_data = torch.tensor(data)\n",
-    "print(type(tensor_data))\n",
-    "print(tensor_data.shape)"
+    "# data = np.load(\"/root/autodl-tmp/data/TVSum/features/text/-esJrBWj2d8_text.npy\")\n",
+    "# tensor_data = torch.tensor(data)\n",
+    "# print(type(tensor_data))\n",
+    "# print(tensor_data.shape)"
    ]
   }
  ],
